# chitr

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py
headers/: RootFrame.h
include/chitr/: CFile.h  CTime.h  ChitrLogger.h  MainFrame.h  Resource.h  RootFrame.h
include/component/: RoundedText.h
include/materialDesign/: font.h
include/media/: ImageContext.h  ImagePanel.h  MediaContext.h  MediaPanel.h  VideoContext.h  VideoPanel.h
src/: ImagePlayback.cpp  MainFrame.cpp  Resource.cpp  RootFrame.cpp  VideoPlayback.cpp  main.cpp
src/component/: RoundedText.cpp
src/media/: ImageContext.cpp  ImagePanel.cpp  MediaContext.cpp  MediaPanel.cpp  VideoContext.cpp  VideoPanel.cpp
src/utils/: CFile.cpp  CTime.cpp  ChitrLogger.cpp  Resource.cpp
